fix(webui): add min width to config and increase wrap point

--- a/webui/css/config/base.css
+++ b/webui/css/config/base.css
@@ -9,7 +9,7 @@
     width: calc(50vw - 30px);
 }
 
-@media (width <= 859px) {
+@media (width <= 1104px) {
     #config {
         width: 80vw;
     }
